<resources>
    <string name="app_name">Small Business</string>
    <string name="authentic_mexican_cuisine">Authentic Mexican Cuisine</string>
    <string name="si_se_or_restaraunt">Si Señor Restaraunt</string>
    <string name="open_daily_11_00_am_8_00_pm">Open Daily: 11:00 am - 8:00 pm</string>
    <string name="_575_404_7636">575-404-7636</string>
    <string name="_2300_n_white_sands_blvd_nalamogordo_nm_88310">2300 N White Sands Blvd,\nAlamogordo, NM 88310</string>
    <string name="the_best_in_town_food_and_service_ntrue_green_chile_and_awesome_red_n_love_them_both">The best in town. ...Food and service. True green Chile and awesome red.  Love them both.</string>
    <string name="had_lunch_there_today_the_food_was_n_amazing_and_our_waitress_was_helpful_ndefinitely_will_be_back">Had lunch there today! The food was  amazing and our waitress was helpful. Definitely will be back!</string>
    <string name="best_lime_margarita_i_ve_ever_had_nwhen_made_with_wine">Best lime margarita I’ve ever had when made with wine!</string>

</resources>
